<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <data>

        <import type="android.view.View" />
        <variable
            name="viewModel"
            type="br.com.appdog.viewmodel.LoginViewModel" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|center_vertical|center_horizontal"

        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/lnl_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"

            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_login"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="80dp"
                android:src="@drawable/ic_logo" />


            <RelativeLayout
                android:id="@+id/rln_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_marginTop="100dp"
                android:layout_marginRight="35dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center|center_vertical|center_horizontal"
                android:orientation="horizontal"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">




                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"

                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/txt_email"
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                        app:hintTextAppearance="@style/TextAppearence.TextInputLayout.Blue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="e-mail"
                        android:textColorHint="@color/colorWhite"
                        app:boxBackgroundColor="@color/colorBlackAlpha"
                        android:textSize="16sp"
                        app:errorEnabled="false">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/txt_edit_email"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="textEmailAddress"
                            android:text="@={viewModel.email}"
                            android:textColor="@color/colorWhite"
                            android:textSize="16sp"

                            />
                    </android.support.design.widget.TextInputLayout>


                </LinearLayout>

            </RelativeLayout>


        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_below="@+id/lnl_login"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">


            <Button
                android:id="@+id/btn_acess"
                style="@style/AppTheme.Button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/button_background"
                android:onClick="onLogin"
                android:text="ACESSAR" />


        </RelativeLayout>


        <ProgressBar
            android:id="@+id/progressbar_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="@{viewModel.loading ? View.VISIBLE : View.GONE}" />

        <ImageView
            android:id="@+id/img_empty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/empty_state"
            android:visibility="gone"/>
    <!-- <include layout="@layout/dialog"/>-->
    </RelativeLayout>
    </ScrollView>


</layout>