<resources>
    <string name="app_name">idDog</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Sair</string>
    <string name="action_about">Sobre</string>
    <string name="font_family_regular">sans-serif</string>
    <string name="token">token</string>
    <string name="husky">Husky</string>
    <string name="hound">Hound</string>
    <string name="pug">Pug</string>
    <string name="labrador">LABRADOR</string>
    <string name="empty_field">Email é obrigatório</string>
    <string name="empty_invalid">Email is not valid</string>

    <string name="datasheet">Ficha técnica</string>
</resources>
